# REST_FULL_API

./: .env  .env.teamplate  .gitignore  README.md  pyproject.toml
MY_SET/: use
myproject/materials/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
myproject/materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
myproject/myproject/: settings.py  urls.py
myproject/users/: admin.py  models.py  serializers.py  urls.py  views.py
myproject/users/fixtures/: Payment_fixture.json  User_fixture.json
myproject/users/management/commands/: create_payment.py
myproject/users/migrations/: 0001_initial.py  0002_remove_customuser_username.py  0003_remove_customuser_avatar_remove_customuser_city_and_more.py  0004_payment.py  0005_alter_payment_user.py  0006_alter_customuser_options_alter_payment_options_and_more.py
